Changing in the config file

--- a/ehour-automation-3/src/main/resources/config.properties
+++ b/ehour-automation-3/src/main/resources/config.properties
@@ -11,5 +11,5 @@ GlobalShortWait=2
 GlobalNoWait=0
 GlobalStalenessWait=1
 URL_Google=https://www.google.com/ncr
-#URL_GridHub=http://192.168.33.16:4444/wd/hub
-URL_GridHub=http://localhost:4446/wd/hub
+URL_GridHub=http://192.168.33.16:4444/wd/hub
+#URL_GridHub=http://localhost:4446/wd/hub
