--- a/ehour-automation-3/src/main/resources/config.properties
+++ b/ehour-automation-3/src/main/resources/config.properties
@@ -1,5 +1,4 @@
 URL_Base=https://ec2-52-39-177-85.us-west-2.compute.amazonaws.com:8443
-
 #URL_Base=http://localhost:8080
 URI_LoginPage=/ehour/eh/login
 GlobalLongRetry=5
@@ -11,5 +10,5 @@ GlobalShortWait=2
 GlobalNoWait=0
 GlobalStalenessWait=1
 URL_Google=https://www.google.com/ncr
-#URL_GridHub=http://192.168.33.16:4444/wd/hub
-URL_GridHub=http://localhost:4446/wd/hub
+URL_GridHub=http://192.168.33.16:4444/wd/hub
+#URL_GridHub=http://localhost:4446/wd/hub
